      patches!
* pam_unix: don't log user unknown failure when he can be properly
  authenticated by another module (t8m)
* configure: don't abort if no cracklib dictinaries were found, but
  warn user that pam_cracklib will not be built (kukuk)
* modules/pam_unix/support.c: Fix return value, if user aborts while
  changes the password (Bug 872945 - kukuk)

0.78: Do Nov 18 14:48:36 CET 2004

* pam_unix: change the order of trying password changes - local first,
  NIS second (t8m)
* pam_wheel: add option only_root to make it affect authentication 
  to root account only
* pam_unix: test return values on renaming files and report error to
  syslog and to user
* pam_unix: forced password change shouldn't trump account expiration
* pam_unix: remove the use of openlog (from debian - toady)
* pam_unix: NIS cleanup (patch from Philippe Troin)
* pam_access: you can now authenticate an explicit user on an explicit
  tty (from debian - toady)
* pam_limits, pam_rhosts, pam_unix: fixed hurd portability issues
  (patch from Igor Khavkine)
* pam_env: added comments in the configuration file to avoid errors
  (from debian - toady)
* pam_mail: check PAM_NO_ENV to know if we can delete the environment
  variable (from debian - toady)
* pam_filter: s/termio/termios/g (from debian - toady)
* pam_mkhomedir: no maxpathlen required (from debian - toady)
* pam_limits: applied patch to allow explicit limits for root
  and remove limits on su. (from debian - toady)
* pam_unix: severe denial of service possible with this module since
  it locked too aggressively. Bug report and testing help from Sascha
  Loetz. (Bug 664290 - agmorgan)
* getlogin was spoofable: "/tmp/" and "/dev/" have the same number of
  characters, so 'ln /dev/tty /tmp/tty1 ; bash < /tmp/tty1 ; logname'
  attacks could potentially spoof pam_wheel with the 'trust' module
  argument into granting access to a luser. Also, pam_unix gave
  odd error messages in such a situation (logname != uid). This